@@ -205,8 +205,9 @@
     </dependency>
   </dependencies>
   <properties>
-    <geotools.version>8.0-RC2</geotools.version>
-    <geoserver.version>2.2-RC1</geoserver.version>
+    <geotools.version>8-SNAPSHOT</geotools.version>
+    <geoserver.version>2.2-SNAPSHOT</geoserver.version>
+    <geotools.version>8-SNAPSHOT</geotools.version>
     <jetty.version>6.1.8</jetty.version>
     <maven.test.search.classdir>true</maven.test.search.classdir>
   </properties>
@@ -242,23 +243,12 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.5.1</version>
         <configuration>
-          <encoding>UTF-8</encoding>
           <source>1.5</source>
           <target>1.5</target>
         </configuration>
       </plugin>
 
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.4</version>
-        <configuration>
-            <argLine>-XX:MaxPermSize=256m</argLine>
-        </configuration>
-      </plugin>
-      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-resources-plugin</artifactId>
@@ -277,11 +267,11 @@
           <stopKey>geonode-stop</stopKey>
           <scanIntervalSeconds>30</scanIntervalSeconds>
           <contextPath>/geoserver</contextPath>
-
+          
           <systemProperties>
             <systemProperty>
               <name>GEOSERVER_DATA_DIR</name>
-              <value>../build/gs_data/</value>
+              <value>../../gs-data/</value>
             </systemProperty>
           </systemProperties>
 
@@ -314,7 +304,6 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
-        <version>2.2</version>
         <configuration>
           <warName>geoserver</warName> 
           <webappDirectory>${project.build.directory}/geoserver</webappDirectory> -->
